<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.0.13</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.poivredesiles</groupId>
	<artifactId>fundraising</artifactId>
	<version>5.0.0</version>
	<name>fundraising</name>
	<description>Fundraising Application For Poivre des Iles</description>
	<properties>
		<java.version>17</java.version>
		<mapstruct.version>1.5.3.Final</mapstruct.version>
		<org.projectlombok.version>1.18.22</org.projectlombok.version>
		<testcontainers.version>1.15.1</testcontainers.version>
		<!--set this to your docker acct name-->
		<docker.image.prefix>daxyonis</docker.image.prefix>
		<!--Set to name of project-->
		<docker.image.name>pdi-fundraising</docker.image.name>
	</properties>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.thymeleaf.extras</groupId>
				<artifactId>thymeleaf-extras-springsecurity5</artifactId>
				<version>3.0.5.RELEASE</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-mail</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-thymeleaf</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.thymeleaf.extras</groupId>
			<artifactId>thymeleaf-extras-springsecurity6</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<scope>runtime</scope>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>com.mysql</groupId>
			<artifactId>mysql-connector-j</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>${org.projectlombok.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
            <groupId>org.mapstruct</groupId>
            <artifactId>mapstruct</artifactId>
            <version>${mapstruct.version}</version>
        </dependency>
		<dependency>
			<groupId>org.mapstruct</groupId>
			<artifactId>mapstruct-processor</artifactId>
			<version>${mapstruct.version}</version>
		</dependency>
		
		<!-- For Communication With FileMaker -->
		<dependency>
		    <groupId>org.springframework</groupId>
		    <artifactId>spring-jdbc</artifactId>		    
		</dependency>
		<dependency>
		    <groupId>org.apache.tomcat</groupId>
		    <artifactId>tomcat-jdbc</artifactId>		    
		</dependency>		
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-configuration-processor</artifactId>
			<optional>true</optional>
		</dependency>
		<!-- Testcontainers -->
		<dependency>
			<groupId>org.testcontainers</groupId>
			<artifactId>testcontainers</artifactId>
			<version>${testcontainers.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.testcontainers</groupId>
			<artifactId>mysql</artifactId>
			<version>${testcontainers.version}</version>
			<scope>test</scope>
		</dependency>
		<!-- Open CSV -->
		<dependency>
		  <groupId>com.opencsv</groupId>
		  <artifactId>opencsv</artifactId>
		  <version>5.3</version>
		</dependency>
		<!-- Thymeleaf Layout Dialect -->
		<dependency>
		  <groupId>nz.net.ultraq.thymeleaf</groupId>
		  <artifactId>thymeleaf-layout-dialect</artifactId>
		 </dependency>
		 <!-- Webjars -->
		 <dependency>
		    <groupId>org.webjars</groupId>
		    <artifactId>bootstrap</artifactId>
		    <version>4.6.2</version>
		</dependency>
		<dependency>
		    <groupId>org.webjars</groupId>
		    <artifactId>jquery</artifactId>
		    <version>3.5.1</version>
		</dependency>				
	    <dependency>
	        <groupId>org.webjars</groupId>
	        <artifactId>webjars-locator-core</artifactId>
	    </dependency>	    
		<!-- Global Payments -->
		<dependency>
		    <groupId>com.heartlandpaymentsystems</groupId>
		    <artifactId>globalpayments-sdk</artifactId>
		    <version>6.1.70</version>
			<exclusions>
				<exclusion>
					<groupId>junit</groupId>
					<artifactId>junit</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<!-- Actuator -->
		<dependency>
	        <groupId>org.springframework.boot</groupId>
	        <artifactId>spring-boot-starter-actuator</artifactId>
	    </dependency>
	    <!-- Spring Boot Admin Client -->
	    <dependency>
		    <groupId>de.codecentric</groupId>
		    <artifactId>spring-boot-admin-starter-client</artifactId>
		    <version>2.3.1</version>
		</dependency>
		<!-- Mockito-->
		<dependency>
		  <groupId>org.mockito</groupId>
		  <artifactId>mockito-core</artifactId>		  
		</dependency>
		<!-- Salty Coffee for NaCl crypto library -->
		<dependency>
			<groupId>software.pando.crypto</groupId>
			<artifactId>salty-coffee</artifactId>
			<version>1.1.1</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.openrewrite.maven</groupId>
				<artifactId>rewrite-maven-plugin</artifactId>
				<version>5.42.0</version>
				<configuration>
					<exportDatatables>true</exportDatatables>
					<activeRecipes>
						<recipe>org.openrewrite.java.spring.boot3.UpgradeSpringBoot_3_0</recipe>
					</activeRecipes>
				</configuration>
				<dependencies>
					<dependency>
						<groupId>org.openrewrite.recipe</groupId>
						<artifactId>rewrite-spring</artifactId>
						<version>5.21.0</version>
					</dependency>
				</dependencies>
			</plugin>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<excludes>
						<exclude>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</exclude>
					</excludes>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>build-info</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-compiler-plugin</artifactId>               
               <configuration>
				   <source>${java.version}</source>
				   <target>${java.version}</target>
                   <annotationProcessorPaths>
					   <path>
						   <groupId>org.projectlombok</groupId>
						   <artifactId>lombok</artifactId>
						   <version>${org.projectlombok.version}</version>
					   </path>
					   <path>
						   <groupId>org.mapstruct</groupId>
						   <artifactId>mapstruct-processor</artifactId>
						   <version>${mapstruct.version}</version>
					   </path>
                       <!-- For JPA static metamodel generation -->
                       <path>
                           <groupId>org.hibernate.orm</groupId>
                           <artifactId>hibernate-jpamodelgen</artifactId>
                           <version>${hibernate.version}</version>
                       </path>
                       </annotationProcessorPaths>
                       <compilerArgs>
		                   <arg>-Amapstruct.suppressGeneratorTimestamp=true</arg>
		                   <arg>-Amapstruct.defaultComponentModel=spring</arg>
		               </compilerArgs>
					<release>${java.version}</release>
               </configuration>
           </plugin>
           <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>build-helper-maven-plugin</artifactId>                
                <executions>
                    <execution>
                        <id>add-source</id>
                        <phase>generate-sources</phase>
                        <goals>
                            <goal>add-source</goal>
                        </goals>
                        <configuration>
                            <sources>
                                <source>target/generated-sources/annotations</source>
                            </sources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
				<groupId>io.github.git-commit-id</groupId>
				<artifactId>git-commit-id-maven-plugin</artifactId>
				<executions>
					<execution>
						<id>get-the-git-infos</id>
						<goals>
							<goal>revision</goal>
						</goals>
						<phase>initialize</phase>
					</execution>
				</executions>
			    <configuration>
					<verbose>true</verbose>
					<failOnNoGitDirectory>true</failOnNoGitDirectory>
					<failOnUnableToExtractRepoInfo>true</failOnUnableToExtractRepoInfo>
			        <dateFormat>yyyyMMdd-HHmmss</dateFormat><!--  human-readable part of the version number -->
			        <generateGitPropertiesFile>true</generateGitPropertiesFile>
					<generateGitPropertiesFilename>${project.build.outputDirectory}/git.properties</generateGitPropertiesFilename>
					<offline>true</offline>
			    </configuration>
			</plugin>
			<plugin>
				<groupId>io.fabric8</groupId>
				<artifactId>docker-maven-plugin</artifactId>
				<version>0.44.0</version>

				<configuration>
					<dockerHost>http://127.0.0.1:2375</dockerHost>
					<verbose>true</verbose>
					<images>
						<image>
							<name>${docker.image.prefix}/${docker.image.name}</name>
							<build>
								<contextDir>${project.basedir}/src/main/docker</contextDir>
								<!--copies artficact to docker build dir in target-->
								<assemblies>
									<assembly>
										<!-- This copies the artifact (i.e. the jar) -->
										<descriptorRef>artifact</descriptorRef>
									</assembly>
									<assembly>
										<name>keys</name>
										<!-- This copies some files (the keystore) -->
										<inline xmlns="http://maven.apache.org/ASSEMBLY/2.2.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
												xsi:schemaLocation="http://maven.apache.org/ASSEMBLY/2.2.0 https://maven.apache.org/xsd/assembly-2.2.0.xsd">
											<id>app-files</id>
											<files>
												<file>
													<source>keystore.p12</source>
												</file>
												<file>
													<source>src/main/docker/keystore-staging.p12</source>
												</file>
												<file>
													<source>src/main/docker/keystore-prod.p12</source>
												</file>
											</files>
										</inline>
									</assembly>
								</assemblies>
								<tags>
									<tag>latest</tag>
									<tag>${project.version}</tag>
								</tags>
							</build>
						</image>
					</images>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>
